Various Reported Bugs + Fixes

--- a/AN_Core/localisation/AN_decisions_l_english.yml
+++ b/AN_Core/localisation/AN_decisions_l_english.yml
@@ -373,6 +373,8 @@
  AN_nepal_nation_desc: ""
  AN_tibet_nation_title: "@TIB Establish Tibet"
  AN_tibet_nation_desc: ""
+ AN_burma_nation_title: "@BRM Establish Burma"
+ AN_burma_nation_desc: ""
  AN_shan_nation_title: "@SST Establish Shan"
  AN_shan_nation_desc: ""
  AN_siam_nation_title: "@SIA Establish Siam"
